syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";


option go_package = "github.com/ozonva/ova-course-api/pkg/ova-course-api;ova_course_api";

package ova.course.api;

// Courses сервис для работы с курсами
service Course {
    // Создание курса
    rpc CreateCourseV1(CreateCourseV1Request) returns (SuccessV1) {};
    // Описание курса
    rpc DescribeCourseV1(DescribeCourseV1Request) returns (DescribeCourseV1Response) {};
    // Список всех доступных курсов
    rpc ListCourseV1(ListCourseV1Request) returns (ListCourseV1Response) {};
    // Удаление курса
    rpc RemoveCourseV1(RemoveCourseV1Request) returns (SuccessV1) {};
    // Множественное добавление курсов
    rpc MultiCreateCourseV1(MultiCreateCourseV1Request) returns (MultiCreateCourseV1Response) {};
    // Обновление курса
    rpc UpdateCourseV1(UpdateCourseV1Request) returns (SuccessV1) {};

}

message CreateCourseV1Request {
    uint64 userId = 1;
    string name = 2;
    google.protobuf.Timestamp date_start = 3;
    google.protobuf.Timestamp date_finish = 4;
}

message SuccessV1 {
    bool success = 1;
}

message SuccessErrorV1{
    bool success = 1;
    string error = 2;
}

message DescribeCourseV1Request {
    uint64 id = 1;
}

message ListCourseV1Request {
    uint64 limit = 1;
    uint64 offset = 2;
}

message DescribeCourseV1Response {
    uint64 id = 1;
    uint64 userId = 2;
    string name = 3;
    string description = 4;
    google.protobuf.Timestamp date_start = 5;
    google.protobuf.Timestamp date_finish = 6;
    google.protobuf.Timestamp date_created = 7;
}
message ListCourseV1Response {
    repeated DescribeCourseV1Response data = 1;
}

message RemoveCourseV1Request {
    uint64 id = 1;
}

message MultiCreateCourseV1Request {
    repeated CreateCourseV1Request data = 1;
}
message MultiCreateCourseV1Response {
    repeated SuccessErrorV1 data = 1;
}

message UpdateCourseV1Request {
    uint64 id = 1;
    uint64 userId = 2;
    string name = 3;
    string description = 4;
    google.protobuf.Timestamp date_start = 5;
    google.protobuf.Timestamp date_finish = 6;
    google.protobuf.Timestamp date_created = 7;
}